--- a/libbeat/docs/upgrading.asciidoc
+++ b/libbeat/docs/upgrading.asciidoc
@@ -37,11 +37,11 @@ upgrade to {beats} 6.7 *before* doing the {es} upgrade.
 Upgrading between non-consecutive major versions (e.g. 5.x to 7.x) is not
 supported.
 
-IMPORTANT: Please read through all upgrade steps before proceeding. Some of the
-steps are required before running the upgraded software for the first time.
+IMPORTANT: Please read through all upgrade steps before proceeding. These steps
+are required before running the software for the first time.
 
-// TODO: Add step-by-step instructions to tell users to back up the registry,
-// copy over the config file, etc. Similar to what Kibana does:
+// TODO: We should add step-by-step instructions to tell users to back up the
+// registry, copy over the config file, etc. Similar to what Kibana does:
 // https://www.elastic.co/guide/en/kibana/master/upgrade-standard.html
 
 [[upgrading-to-6.7]]
@@ -81,7 +81,7 @@ running in your environment.
 
 *Metricbeat and Filebeat users:* If you use {beats} central management,
 make sure you migrate the {beats} central management index to 6.7 before you
-upgrade to 7.0. Although central management is not a GA-level feature in 7.0.0,
+upgrade to 7.0. Although central management is not a GA-level feature in 7.0,
 we've provided a migration tool to help you migrate your configurations. For
 more information, see the
 https://www.elastic.co/blog/beats-6-7-0-released[Beats 6.7.0 release blog].
@@ -117,6 +117,70 @@ with indices created by {beats} 7.0 or later.
 Did you run the Beat before reading this section? That's OK. See the clean-up
 steps described under <<missing-fields>>.
 
+[[upgrade-mapping-template]]
+==== Upgrade the {es} mapping template
+
+Mapping templates and the default index names are versioned. For example,
+Metricbeat {stack-version} typically creates indices like this:
+
+["source","sh",subs="attributes"]
+------------------------------------------------------------------------------
+metricbeat-{stack-version}-{localdate}
+------------------------------------------------------------------------------
+
+And the corresponding {es} template is named +metricbeat-{stack-version}+.
+
+This means that each version of the Beat creates a new index, and it's
+guaranteed that the correct template for that version is applied. With these
+changes in place, you generally don't have to do anything to upgrade the mapping
+template when you move to a new version. Just load the index template *before*
+ingesting any data into {es}.
+
+To load the index template, run the `setup` command with the `--template` option
+specified. For example:
+
+[source,shell]
+----
+metricbeat setup --template
+----
+
+If your {beats} configuration use an output other than `elasticsearch`,
+temporarily enable the `elasticsearch` output when you run the `setup` command.
+For example:
+
+[source,shell]
+--
+metricbeat setup --template -E output.logstash.enabled=false -E 'output.elasticsearch.hosts=["localhost:9200"]'
+--
+
+[[non-es-outputs]]
+==== How to use versioned templates when the output is not {es}
+
+If you've configured {beats} to send events to a different output, such as {ls},
+make sure you use versioned templates and indices. Otherwise, after you
+upgrade, there will be field conflicts. To use versioned index templates and
+indices, use the metadata from {beats} to set the index, and allow {beats} to
+manage the template.
+
+For example, for {ls}, set the {ls} `index` setting as recommended in the
+{logstash-ref}/plugins-inputs-beats.html[{beats} input plugin] documentation and
+allow {beats} to manage the index template:
+
+[source,json]
+----
+    manage_template => false
+    index => "%{[@metadata][beat]}-%{[@metadata][version]}-%{+YYYY.MM.dd}" 
+----
+
+When you use this configuration, the index name is set to match the index
+pattern in the {beats} index template.
+
+IMPORTANT: The index name must match the index pattern in the {beats} index
+template. For example, if {ls} sends events to an index called
++metricbeat-7-{localdate}+, but the index template expects indices to match
++metricbeat-{stack-version}-*+, you may encounter mapping errors and be unable
+to index {beats} events.
+
 ==== Upgrade dashboards
 
 We recommend that you re-import the {kib} dashboards after upgrading {kib} and
@@ -140,23 +204,6 @@ metricbeat setup --dashboards
 Also, if you plan to run {beats} 6.7 and 7.0 in parallel,
 <<enable-ecs-compatibility,enable the compatibility layer>> *before* you start
 ingesting data. 
-
-
-[[load-index-template-manually]]
-==== Load the 7.0 index template manually for outputs other than {es}
-
-If your {beats} configuration use an output other than `elasticsearch`, load
-the index template manually into {es} *before* ingesting any data into 7.0
-indices.
-
-To load the template manually, run the `setup` command with the `--template`
-flag specified. Temporarily enable the `elasticsearch` output when you run this
-command. For example:
-
-[source,shell]
---
-metricbeat setup --template -E output.logstash.enabled=false -E 'output.elasticsearch.hosts=["localhost:9200"]'
---
 
 [[migrate-filebeat-registry]]
 ==== Migrate {filebeat} registry to use new format
@@ -189,59 +236,10 @@ sending data to {beats} clusters that support it. Make sure {beats} users have
 the privileges needed to use index lifecycle management, or disable index
 lifecycle management. 
 
-For help troubleshooting authorization issues related to index lifecycle
-management, see <<user-unauthorized>>.
+For help troubleshooting authorization issues, see <<user-unauthorized>>.
 
 If you want to disable index lifecycle management, set
 `setup.ilm.enabled: false` in the {beats} configuration file.
-
-[[upgrade-mapping-template]]
-==== Upgrade the {es} mapping template
-
-//TODO: possibly move this topic.
-
-Mapping templates and the default index names are versioned. For example,
-Metricbeat {stack-version} typically creates indices like this:
-
-["source","sh",subs="attributes"]
-------------------------------------------------------------------------------
-metricbeat-{stack-version}-{localdate}
-------------------------------------------------------------------------------
-
-And the corresponding {es} template is named +metricbeat-{stack-version}+.
-
-This means that each version of the Beat creates a new index, and it is
-guaranteed that the correct template for that version is applied. With these
-changes in place, you generally don't have to do anything to upgrade the mapping
-template when you move to a new version.
-
-[[non-es-outputs]]
-==== How to use versioned templates for outputs other than {es}
-
-If you've configured {beats} to send events to a different output, such as {ls},
-make sure you use versioned templates and indices. Otherwise, after you
-upgrade, there will be field conflicts. To use versioned index templates and
-indices, use the metadata from {beats} to set the index and allow {beats} to
-manage the template.
-
-For example, for {ls}, set the {ls} `index` setting as recommended in the
-{logstash-ref}/plugins-inputs-beats.html[{beats} input plugin] documentation and
-allow {beats} to manage the index template:
-
-[source,json]
-----
-    manage_template => false
-    index => "%{[@metadata][beat]}-%{[@metadata][version]}-%{+YYYY.MM.dd}" 
-----
-
-When you use this configuration, the index name is set to match the index
-pattern in the {beats} index template.
-
-IMPORTANT: The index name must match the index pattern in the {beats} index
-template. For example, if {ls} sends events to an index called
-+metricbeat-7-{localdate}+, but the index template expects indices to match
-+metricbeat-{stack-version}-*+, you may encounter mapping errors and be unable
-to index {beats} events.
 
 [[troubleshooting-upgrade]]
 === Troubleshooting {beats} upgrade issues
@@ -268,64 +266,59 @@ DELETE metricbeat-{stack-version}-{localdate}*
 . If you want the index to work with 6.x dashboards, turn on the compatibility
 layer. See <<enable-ecs-compatibility>>.
 
-. Load the correct index template:
-
-.. If you're sending events directly to {es}, configure the following settings
-in the {beats} configuration file to overwrite the index template:
-+
-[source,yaml]
-----
-setup.template.enabled: true
-setup.template.overwrite: true
-----
-// CONSOLE
-
-.. If you're sending events to a different output, such as {ls}, load the
-template manually. See <<load-index-template-manually>>.
+. Load the correct index template. See <<upgrade-mapping-template>>.
 
 . Restart {beats}.
-
-// REVIEWERS: If users mess up and run Filebeat before setting up the index
-// template correctly (for example, if they don't turn on compatibility), is there
-// some way to recover the previous cursor location to avoid dropped or
-// duplicate events?
 
 [[user-unauthorized]]
 ==== User is not authorized
 
-//TODO: Test this again. 
+//TODO: Info taken from notes. I need to re-test to verify.
 
 Because index lifecycle management is on by default in 7.0, you might encounter
 new errors related to user authorization when you run version 7.0 against an
 {es} cluster that supports index lifecycle management.
 
-*Error:* [cluster:monitor/main] is unauthorized for user
-*Problem*: The user is unable to send monitoring information.
+===== `[cluster:monitor/main] is unauthorized for user`
+
+*Problem*: The {beats} user is unable to send monitoring information.
+
 *Solution:* Grant the `monitor` cluster privilege.
 
-*Error:* [cluster:admin/ilm/put] is unauthorized for user 
-*Problem:*: The user is not authorized to load ILM policies. 
+===== `[cluster:admin/ilm/put] is unauthorized for user` 
+
+*Problem:* The {beats} user is not authorized to load ILM policies. 
+
 *Solution:* Grant the `manage_ilm` cluster privilege.
 
-*Error:* [indices:admin/template/put] is unauthorized for user 
+===== `[indices:admin/template/put] is unauthorized for user` 
+
 *Problem:* Automatic template loading is required when ILM is enabled, but the
 user is not authorized to manage index templates.
+
 *Solution:* Grant the `manage_index_templates` cluster privilege.
 
-*Error:* [indices:admin/aliases] is unauthorized for user 
-*Problem:* The user is unable to set up aliases needed by the compatibility
-layer.
-*Solution:* Grant the `manage` privilege on the {beats} index`.
+===== `[indices:admin/aliases] is unauthorized for user` 
 
-[indices:data/write/bulk] is unauthorized for user 
-*Problem:*  The user is unable to write events to {es}.
-*Solution:* Grant `index` privileges on the Beats index.
+*Problem:* The {beats} user is unable to set up aliases needed by the compatibility
+layer.
+
+*Solution:* Grant the `manage` privilege on the {beats} indices.
+
+//TODO: Verify ^^. Not sure about this one.
+
+===== `[indices:data/write/bulk] is unauthorized for user` 
+
+*Problem:*  The {beats} user is unable to write events to {es}.
+
+*Solution:* Grant the `index` privilege on the {beats} indices.
 
 [[old-dashboards-failing]]
 ==== 6.x dashboards not showing data from 7.0 shippers
 
 You might have run the Beat without turning on the compatibility layer. See
-<<missing-fields>>.
+<<enable-ecs-compatibility>> then clean up your environment as described
+under <<missing-fields>>.
 
 [[logstash-data-missing]]
 ==== Data parsed by {ls} not appearing in 7.0 dashboards
