Add _bucket to histogram metrics in Prometheus Collector (#11578)
* Add _bucket to histogram metrics

(cherry picked from commit 9835571f9b397a781fde9ddc9038decc7246d1a3)

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -51,6 +51,8 @@ https://github.com/elastic/beats/compare/v7.0.0-rc1...master[Check the HEAD diff
 
 *Metricbeat*
 
+- Add _bucket to histogram metrics in Prometheus Collector {pull}11578[11578]
+
 *Packetbeat*
 
 *Winlogbeat*
