--- a/filebeat/docs/modules/coredns.asciidoc
+++ b/filebeat/docs/modules/coredns.asciidoc
@@ -11,8 +11,7 @@ This file is generated! See scripts/docs_collector.py
 == Coredns Module
 
 This is a filebeat module for coredns. It supports both standalone coredns deployment and 
-coredns deployment in Kubernetes. Standalone coredns deployment uses the log fileset, while
-Kubernetes coredns deployment uses the kubernetes fileset.
+coredns deployment in Kubernetes. 
 
 [float]
 === Compatibility
