--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -58,8 +58,7 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha2...master[Check the HEAD d
 - Improve detection of file deletion on Windows. {pull}10747[10747]
 - Fix goroutine leak happening when harvesters are dynamically stopped. {pull}11263[11263]
 - Fix `add_docker_metadata` source matching, using `log.file.path` field now. {pull}11577[11577]
-- Address issue: Filebeat coredns module has wrong information in docs.asciidoc and some kubernetes meta 
-  fields are missing. {pull}11591[11591]
+- Address issue: Filebeat coredns module has wrong information in docs.asciidoc and some kubernetes meta fields are missing. {pull}11591[11591]
 
 *Heartbeat*
 
